[package]
name = "liner"
version = "0.1.0"
authors = ["MovingtoMars <definitelynotliam@gmail.com>"]

[lib]
name = "liner"

[[bin]]
name = "liner_test"

[dependencies]
unicode-width = "0.1.*"

[dependencies.termion]
git = "https://github.com/Ticki/termion.git"
rev = "fb1d702b13b35f8b0fbfebedfc1cd8442d54da7f"
