[package]
name = "liner"
version = "0.1.3"
authors = ["MovingtoMars <definitelynotliam@gmail.com>"]
description = "A library offering readline-like functionality."
repository = "https://github.com/MovingtoMars/liner"
homepage = "https://github.com/MovingtoMars/liner"
keywords = ["readline", "line", "input", "editor", "completion"]
license = "MIT"
exclude = [
    "CONTRIBUTING.md",
    ".travis.yml",
]

[lib]
name = "liner"

[[bin]]
name = "liner_test"

[dependencies]
termion = "1.1.2"
unicode-width = "0.1.*"
